--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2018"
 [dependencies]
 tokio = { version = "1.6.1", features = ["full"] }
 simple-error = "0.2.3"
+serenity = "0.10.7"
+serde = "1.0.126"
+serde_json = "1.0.64"
+lazy_static = "1.4.0"
+regex = "1.5.4"
