irc: enable TLS support, resolves #2

--- a/config.json.sample
+++ b/config.json.sample
@@ -1,7 +1,8 @@
 {
     "token": "<discord-bot-token>",
     "servers": [{
-        "address": "irc.libera.chat:6667",
+        "address": "irc.libera.chat:6697",
+        "tls": true,
         "nick": "irc_nick_here",
         "channels": [
             {
