discord: handle messages from unknown channels
This allows for server broadcasts, DMs, and other things to be
forwarded (even if we can't respond).

--- a/config.json.sample
+++ b/config.json.sample
@@ -5,6 +5,7 @@
         "address": "irc.libera.chat:6697",
         "tls": true,
         "nick": "irc_nick_here",
+        "general_webhook":"https://discord.com/api/webhooks/id/token",
         "channels": [
             {
                 "name":"##john-test",
